# make4py-example

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/helpers/: README.md
.github/workflows/: build_and_test.yml
doc/manpage/: index.rst
doc/source/: conf.py  development.rst  index.rst  installation.rst  usage.rst
pip_deps/: dev_requirements-linux-py3.10.6.txt  dev_requirements-linux-py3.8.10.txt  dev_requirements-linux-py3.8.16.txt  dev_requirements-win32-py3.11.0.txt  requirements-linux-py3.10.6.txt  requirements-linux-py3.8.10.txt  requirements-linux-py3.8.16.txt  requirements-win32-py3.11.0.txt
src/: example_app.py
src/app_mod/: __init__.py  answers.py
test/functional_tests/: conftest.py  test_usage.py
test/unittests/: test_app_mod.py
